--- a/.github/workflows/build-mapping.yml
+++ b/.github/workflows/build-mapping.yml
@@ -35,7 +35,7 @@ on:
         required: true
 jobs:
   mapping:
-    runs-on: ${{ inputs.runs-on }}
+    runs-on: [${{ inputs.runs-on }}]
     permissions:
       contents: write
       pull-requests: write
