build - runs on self-hosted as default

--- a/.github/workflows/build-mapping.yml
+++ b/.github/workflows/build-mapping.yml
@@ -25,7 +25,7 @@ on:
         description: 'Runner type (e.g., ubuntu-latest, self-hosted)'
         required: false
         type: string
-        default: 'ubuntu-latest'
+        default: 'self-hosted'
     secrets:
       GH_PULL_REQUEST_TOKEN:
         required: true
