mapping - add timeout greater than 6 hours due to mappings taking longer than the default of 6

--- a/.github/workflows/build-mapping.yml
+++ b/.github/workflows/build-mapping.yml
@@ -35,6 +35,7 @@ on:
         required: true
 jobs:
   mapping:
+    timeout-minutes: 900
     runs-on: ${{ inputs.runs-on }}
     permissions:
       contents: write
