--- a/.github/workflows/build-mapping.yml
+++ b/.github/workflows/build-mapping.yml
@@ -25,7 +25,7 @@ on:
         description: 'Runner type (e.g., ubuntu-latest, self-hosted)'
         required: false
         type: string
-        default: 'self-hosted'
+        default: 'ubuntu-latest'
     secrets:
       GH_PULL_REQUEST_TOKEN:
         required: true
@@ -113,7 +113,7 @@ jobs:
           echo "  Artifact Coordinates: '$MAPPING_CONFIG_COORDINATES'"
           echo "  Desired Slug: '$MAPPING_CONFIG_SLUG'"
           
-          $cli mapping build -r "$MAPPING_CONFIG_REPO" \
+          $cli mapping build -d -r "$MAPPING_CONFIG_REPO" \
             ${MAPPING_CONFIG_COORDINATES:+-c "$MAPPING_CONFIG_COORDINATES"} \
             ${MAPPING_CONFIG_SLUG:+-s "$MAPPING_CONFIG_SLUG"}
 
