workflows - error job if errors folder has contents

--- a/.github/workflows/upgrade-app.yml
+++ b/.github/workflows/upgrade-app.yml
@@ -246,3 +246,4 @@ jobs:
         if: always() && hashFiles('.advisor/errors/') != ''
         run: |
           cat .advisor/errors/*
+          exit 1
