--- a/.github/workflows/build-mapping.yml
+++ b/.github/workflows/build-mapping.yml
@@ -135,6 +135,7 @@ jobs:
         if: always() && hashFiles('.advisor/errors/') != ''
         run: |
           cat .advisor/errors/*
+          exit 1
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
