--- a/.github/workflows/build-mapping.yml
+++ b/.github/workflows/build-mapping.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           java-version: ${{ inputs.java-version }}
           distribution: 'liberica'
-      - name: Cache Maven dependencies
+      - name: Cache Maven
         uses: actions/cache@v4
         with:
           path: ~/.m2/repository
