--- a/.github/workflows/upgrade-app.yml
+++ b/.github/workflows/upgrade-app.yml
@@ -57,6 +57,7 @@ on:
         description: 'Number of steps of the original Upgrade Plan that will be squashed as the first Upgrade Plan step'
         required: false
         type: string
+        default: "10"
     secrets:
       GH_PULL_REQUEST_TOKEN:
         required: true
