--- a/.github/workflows/build-mapping.yml
+++ b/.github/workflows/build-mapping.yml
@@ -104,6 +104,7 @@ jobs:
             }
           EOF
       - name: Build mapping
+        id: build-mapping
         continue-on-error: true
         env:
           ARTIFACTORY_TOKEN: ${{ secrets.BROADCOM_SPRING_PASSWORD }}
@@ -135,6 +136,10 @@ jobs:
         if: always() && hashFiles('.advisor/errors/') != ''
         run: |
           cat .advisor/errors/*
+          exit 1
+      - name: fail if error outside advisor
+        if: steps.build-mapping.outcome == 'failure'
+        run: |
           exit 1
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
