--- a/.github/workflows/build-mapping.yml
+++ b/.github/workflows/build-mapping.yml
@@ -51,16 +51,16 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.m2/repository
-          key: org-maven-${{ runner.os }}-v1
-          restore-keys: org-maven-${{ runner.os }}-
+          key: org-maven-${{ runner.os }}-v2
+          restore-keys: org-maven-${{ runner.os }}-v2
       - name: Cache Gradle
         uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: org-gradle-${{ runner.os }}-v1
-          restore-keys: org-gradle-${{ runner.os }}-
+          key: org-gradle-${{ runner.os }}-v2
+          restore-keys: org-gradle-${{ runner.os }}-v2
       - name: Configure Maven Settings
         uses: 's4u/maven-settings-action@v3.1.0'
         with:
