--- a/.github/workflows/upgrade-app.yml
+++ b/.github/workflows/upgrade-app.yml
@@ -238,6 +238,69 @@ jobs:
             echo "Running upgrade-plan apply"
             echo "${UPGRADE_PLAN_APPLY_CMD[@]}"
             "${UPGRADE_PLAN_APPLY_CMD[@]}"
+          else
+            # Get current Spring Boot version before upgrade
+            old_version=$(./mvnw help:evaluate -Dexpression=project.parent.version -q -DforceStdout 2>/dev/null || echo "unknown")
+            new_version="unknown"
+          
+            if [ -f "pom.xml" ]; then
+              echo "Upgrading patch versions of spring in maven project"
+              ./mvnw org.openrewrite.maven:rewrite-maven-plugin:run \
+                -Drewrite.configLocation=https://raw.githubusercontent.com/abeyta-labs/saa-workflows/refs/heads/main/recipes/sprint-patch-versions.yaml \
+                -Drewrite.activeRecipes=me.abeyta.UpgradeAllSpringLatestPatch
+          
+              # Extract new Spring Boot version from pom.xml changes
+              new_version=$(./mvnw help:evaluate -Dexpression=project.parent.version -q -DforceStdout 2>/dev/null || \
+                git diff pom.xml | grep -A1 "spring-boot-starter-parent" | grep "<version>" | head -1 | sed -n 's/.*<version>\(.*\)<\/version>.*/\1/p' | tr -d '+' || \
+                echo "unknown")
+            elif [ -f "build.gradle" ] || [ -f "build.gradle.kts" ]; then
+              echo "Upgrading patch versions of spring in gradle project"
+              cat > rewrite-init.gradle << 'EOF'
+          initscript {
+            repositories { mavenCentral() }
+            dependencies { classpath 'org.openrewrite:plugin:7.3.1' }
+          }
+          allprojects {
+            apply plugin: org.openrewrite.gradle.RewritePlugin
+          }
+          EOF
+            
+              ./gradlew --init-script rewrite-init.gradle rewriteRun \
+                -Prewrite.activeRecipes=me.abeyta.UpgradeAllSpringLatestPatch
+              # Extract new Spring Boot version from Gradle
+              new_version=$(./gradlew properties -q 2>/dev/null | grep "^springBootVersion:" | awk '{print $2}' || \
+                grep -E "org.springframework.boot" build.gradle build.gradle.kts 2>/dev/null | grep -oE "[0-9]+\.[0-9]+\.[0-9]+" | head -1 || \
+                grep "springBootVersion" gradle.properties 2>/dev/null | cut -d'=' -f2 | tr -d ' ' || \
+                echo "unknown")
+            else
+              echo "No Maven or Gradle build file found, skipping patch upgrades"
+            fi
+          
+            if git diff --quiet && git diff --cached --quiet; then
+              echo "No patch changes to commit."
+              return 1
+            fi
+          
+            branch_name="patch-upgrade-$(date +%Y%m%d-%H%M%S)"
+            pr_title="[Auto] Spring Boot Patch Upgrade to ${new_version}"
+          
+            if [[ "$old_version" != "unknown" && "$new_version" != "unknown" ]]; then
+              pr_title="[Auto] Spring Boot Upgrade ${old_version} → ${new_version}"
+            fi
+          
+            git checkout -b "$branch_name"
+            git add .
+            git commit -m "$pr_title - $(date)"
+            git push -u origin "$branch_name"
+          
+            #gh pr create \
+            # --repo "$REPO_FULL_NAME" \
+            # --fill \
+            # --base main \
+            # --head "$branch_name" \
+            # --title "$pr_title"
+            #
+            #echo "Pull request created: $pr_title"
           fi
           
           # clean up
