--- a/.github/workflows/build-mapping-github-app.yml
+++ b/.github/workflows/build-mapping-github-app.yml
@@ -145,11 +145,9 @@ jobs:
           echo "  Artifact Coordinates: '$MAPPING_CONFIG_COORDINATES'"
           echo "  Desired Slug: '$MAPPING_CONFIG_SLUG'"
           
-          echo $cli mapping build -r "$MAPPING_CONFIG_REPO" --accessToken $GITHUB_APP_TOKEN \
-            ${MAPPING_CONFIG_COORDINATES:+-c "$MAPPING_CONFIG_COORDINATES"} \
-            ${MAPPING_CONFIG_SLUG:+-s "$MAPPING_CONFIG_SLUG"}
+          MAPPING_CONFIG_REPO_WITH_AUTH="${MAPPING_CONFIG_REPO/https:\/\//https://x-access-token:${GITHUB_APP_TOKEN}@}"
           
-          $cli mapping build -r "$MAPPING_CONFIG_REPO" --accessToken $GITHUB_APP_TOKEN \
+          $cli mapping build -r "$MAPPING_CONFIG_REPO_WITH_AUTH" \
             ${MAPPING_CONFIG_COORDINATES:+-c "$MAPPING_CONFIG_COORDINATES"} \
             ${MAPPING_CONFIG_SLUG:+-s "$MAPPING_CONFIG_SLUG"}
 
