--- a/.github/workflows/build-mapping-github-app.yml
+++ b/.github/workflows/build-mapping-github-app.yml
@@ -45,6 +45,15 @@ jobs:
       contents: write
       pull-requests: write
     steps:
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false # Set to true if you DON'T need pre-installed Go/Node/Python
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: false
+          swap-storage: true
       - name: Generate GitHub App Token
         id: app-token
         uses: actions/create-github-app-token@v1
