--- a/.github/workflows/build-mapping-github-app.yml
+++ b/.github/workflows/build-mapping-github-app.yml
@@ -26,6 +26,11 @@ on:
         required: false
         type: string
         default: 'ubuntu-latest'
+      after-mapping-script:
+        description: 'path to script to run after the mapping is completed. can be used to cleanup or adjust the mapping prior to opening pr'
+        required: false
+        type: string
+        default: ''
     secrets:
       GH_PULL_REQUEST_TOKEN:
         required: true
@@ -67,6 +72,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           token: ${{ steps.app-token.outputs.token }}
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
@@ -169,6 +178,27 @@ jobs:
         if: steps.build-mapping.outcome == 'failure'
         run: |
           exit 1
+      - name: execute after mapping script
+        if: ${{ inputs.after-mapping-script != '' }}
+        shell: bash
+        run: |
+          SCRIPT_PATH="${{ inputs.after-mapping-script }}"
+          
+          case "$SCRIPT_PATH" in
+            *.py)
+              echo "Detected Python script. Running with python3..."
+              python3 "$SCRIPT_PATH"
+              ;;
+            *.sh)
+              echo "Detected Shell script. Running with bash..."
+              chmod +x "$SCRIPT_PATH"
+              bash "$SCRIPT_PATH"
+              ;;
+            *)
+              echo "::error::Unsupported file extension for script: $SCRIPT_PATH"
+              exit 1
+              ;;
+          esac
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
