--- a/.github/workflows/build-mapping-github-app.yml
+++ b/.github/workflows/build-mapping-github-app.yml
@@ -41,6 +41,11 @@ on:
         required: false
         type: boolean
         default: false
+      large-disk:
+        description: 'Perform runner disk cleanup prior to mapping. Needed for some large repos'
+        required: false
+        type: boolean
+        default: false
 
     secrets:
       GH_PULL_REQUEST_TOKEN:
@@ -62,6 +67,7 @@ jobs:
       pull-requests: write
     steps:
       - name: Free Disk Space (Ubuntu)
+        if: inputs.large-disk == true
         uses: jlumbroso/free-disk-space@main
         with:
           tool-cache: false # Set to true if you DON'T need pre-installed Go/Node/Python
